service-pod-ingress-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pod-apache
spec:
  type: ClusterIP
  selector:
    app: docker-pod-apache
  ports:
    - port: 80
