service-pod-ingress-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pod-nginx
spec:
  type: ClusterIP
  selector:
    app: docker-pod-nginx
  ports:
    - port: 80
